<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#001a66">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:text="@string/join_new_lesson" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/write_lesson_code" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLength="5"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:id="@+id/student_join_lesson_dialog_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/student_join_lesson_dialog_join_button"
            android:text="@string/join" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/student_join_lesson_dialog_cancel_button"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>