<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shifted">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:id="@+id/school_sign_up_screen_school_label"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_above="@+id/school_sign_up_screen_password_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/school_sign_up_screen_password_label"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/school_sign_up_screen_school_label"
        android:layout_above="@+id/school_sign_up_screen_confirm_password_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:id="@+id/school_sign_up_screen_confirm_password_label"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/school_sign_up_screen_school_label"
        android:layout_above="@+id/school_sign_up_screen_country_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:id="@+id/school_sign_up_screen_country_label"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/school_sign_up_screen_school_label"
        android:layout_above="@+id/school_sign_up_screen_sign_up_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/school_sign_up_screen_sign_up_label"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/school_sign_up_screen_school_edit_text"
        android:inputType="textPersonName"
        android:layout_alignEnd="@+id/school_sign_up_screen_password_edit_text"
        android:layout_alignBottom="@+id/school_sign_up_screen_school_label" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/school_sign_up_screen_password_edit_text"
        android:inputType="textPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_alignBottom="@+id/school_sign_up_screen_password_label" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/school_sign_up_screen_confirm_password_edit_text"
        android:inputType="textPassword"
        android:layout_alignEnd="@+id/school_sign_up_screen_password_edit_text"
        android:layout_alignBottom="@+id/school_sign_up_screen_confirm_password_label" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/school_sign_up_screen_spinner"
        android:layout_alignBottom="@+id/school_sign_up_screen_country_label"
        android:layout_alignStart="@+id/school_sign_up_screen_password_edit_text"
        android:entries="@array/countries_array" />

</RelativeLayout>